Add buttons to topics

--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -9,12 +9,12 @@
   <ul>
     {% for topic in topics %}
       <li><h3>
-          <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic  }}</a>
+          <a class="btn btn-primary" href="{% url 'learning_logs:topic' topic.id %}">{{ topic  }}</a>
       </h3></li>
       {% empty %}
         <li><h3>No topics have been added yet.</h3></li>
       {% endfor %}
   </ul>
 
-  <h3><a href="{% url 'learning_logs:new_topic' %}">Add a new topic</a></h3>
+  <h3><a class="btn btn-primary btn-success" href="{% url 'learning_logs:new_topic' %}">Add a new topic</a></h3>
 {% endblock content %}
