Move base template to top-level dir

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,4 +1,4 @@
-{% extends "learning_logs/base.html" %}
+{% extends "base.html" %}
 
 {% block page_header %}
   <h2>There has been an internal error. (500)</h2>
