--- a/templates/learning_logs/index.html
+++ b/templates/learning_logs/index.html
@@ -1,8 +1,8 @@
-{% extends "learning_logs/base.html" %}
+{% extends "base.html" %}
 
 {% block page_header %}
   <div class="jumbotron">
-    <h1 class="display-3">Track your learning.</h1>
+    <h1 class="display-4">Track your learning.</h1>
 
     <p class="lead">Make your own Learning Log, and keep a list of the
         topics you're learning about. Whenever you learn something new
