--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -5,7 +5,7 @@
     <title>Learning Log</title>
 </head>
 <body>
-{% extends "learning_logs/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
   <p>You have been logged out. Thank you for visiting!</p>
