Redirect on login to topics

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
     {% endbuttons %}
 
     <input type="hidden" name="next"
-      value="{% url 'learning_logs:index' %}" />
+      value="{% url 'learning_logs:topics' %}" />
   </form>
 
 {% endblock content %}
