--- a/templates/base.html
+++ b/templates/base.html
@@ -36,14 +36,14 @@
             <span class="navbar-text"}">Hello, {{ user.username }}.</span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
+            <a class="nav-link" href="{% url 'accounts:logout' %}">Log out</a>
           </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'users:register' %}">Register</a>
+            <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'users:login' %}">Log in</a></li>
+            <a class="nav-link" href="{% url 'accounts:login' %}">Log in</a></li>
         {% endif %}
       </ul>
     </div>
