--- a/templates/learning_logs/index.html
+++ b/templates/learning_logs/index.html
@@ -8,7 +8,7 @@
         topics you're learning about. Whenever you learn something new
         about a topic, make an entry summarizing what you've learned.</p>
 
-    <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
+    <a class="btn btn-lg btn-primary" href="{% url 'accounts:register' %}"
         role="button">Register &raquo;</a>
   </div>
 {% endblock page_header %}
