Update navbar. Fixes #9

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
    {% if user.is_authenticated %}
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
-         <a href="{% url 'learning_logs:new_topic' %}">New Topic</a>
+         <a href="{% url 'learning_logs:topics' %}">Topics</a>
        </li>
      </ul>
    {% endif %}
