--- a/templates/learning_logs/new_topic.html
+++ b/templates/learning_logs/new_topic.html
@@ -1,18 +1,21 @@
 {% extends "base.html" %}
 {% load bootstrap4 %}
+{% load crispy_forms_tags }%
 
 {% block page_header %}
-  <h2>Add a new topic</h2>
 {% endblock page_header %}
 
 {% block content %}
-
-  <form action="{% url 'learning_logs:new_topic' %}" method='post'>
+<div class="container">
+  <p>
+  <h2>Add a new topic</h2>
+  <form class="col-md-6" action="{% url 'learning_logs:new_topic' %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
     <button name="submit" class="btn btn-primary">Add topic</button>
         {% endbuttons %}
-
   </form>
+  </p>
+</div>
 {% endblock content %}
