--- a/templates/learning_logs/edit_entry.html
+++ b/templates/learning_logs/edit_entry.html
@@ -1,19 +1,22 @@
 {% extends "base.html" %}
 {% load bootstrap4 %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
-  <h2>Edit entry</h2>
 {% endblock page_header %}
 {% block content %}
-
+<div class="container">
+  <p>
+  <h2>Edit entry</h2>
   <p><a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a></p>
 
-  <form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
+  <form class="col-md-6" action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
     <button name="submit" class="btn btn-primary">Save changes</button>
     {% endbuttons %}
-
   </form>
+  </p>
+</div>
 {% endblock content %}
