--- a/templates/learning_logs/topic.html
+++ b/templates/learning_logs/topic.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
-  <h3>{{ topic }}</h3>
 {% endblock page_header %}
 
 {% block content %}
+<div class="container">
   <p>
-    <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+  <h3>{{ topic }}</h3>
   </p>
 
 
@@ -25,5 +26,6 @@
       <p>There are no entries for this topic yet.</p>
   {% endfor %}
   </ul>
-
+    <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+</div>
 {% endblock content %}
