Fix URL for about page

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
           Log In</a>
           <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">
          Sign up</a>
-          <a href="{% url 'about' %}" class="btn btn-outline-secondary ml-2">
+          <a href="{% url 'learning_logs:about' %}" class="btn btn-outline-secondary ml-2">
           About</a>
         </form>
       {% endif %}
