--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no">
     <title>Learning Log</title>
-
+    <!-- CSS -->
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 </head>
 <body>
@@ -74,8 +76,11 @@
       {% block page_header %}{% endblock page_header %}
     </div>
     <div>
-      {% block content %}{% endblock content %}
+      {% block content %}
+      {% endblock content %}
     </div>
+    <!-- JavaScript -->
+    <script src = "{% static 'js/base.js' %}"></script>
   </main>
 </body>
 
