--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
    <header>
    <!-- Fixed navbar -->
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   <a class="navbar-brand" href="{% url 'learning_logs:index' %}">Learning Log</a>
+   <a class="navbar-brand" href="{% url 'home' %}">Learning Log</a>
    {% if user.is_authenticated %}
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
