--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'account_logout' %}"> Log Out</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'learning_logs:about' %}">About</a>
+              <a class="dropdown-item" href="{% url 'about' %}">About</a>
             </div>
           </li>
         </ul>
@@ -65,7 +65,7 @@
           Log In</a>
           <a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">
          Sign up</a>
-          <a href="{% url 'learning_logs:about' %}" class="btn btn-outline-secondary ml-2">
+          <a href="{% url 'about' %}" class="btn btn-outline-secondary ml-2">
           About</a>
         </form>
       {% endif %}
