--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,24 @@
     <div>
       {% block content %}
       {% endblock content %}
+      <!-- Pagination -->
+      {% block pagination %}
+        {% if is_paginated %}
+          <div class="pagination">
+            <span class="page-links">
+              {% if page_obj.has_previous %}
+                <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+              {% endif %}
+              <span class="page-current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+              </span>
+              {% if page_obj.has_next %}
+                <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+              {% endif %}
+            </span>
+          </div>
+        {% endif %}
+      {% endblock pagination %}
     </div>
     <!-- JavaScript -->
     <script src = "{% static 'js/base.js' %}"></script>
