Add button type. Fixes #19

--- a/templates/learning_logs/topic.html
+++ b/templates/learning_logs/topic.html
@@ -26,6 +26,6 @@
       <p>There are no entries for this topic yet.</p>
   {% endfor %}
   </ul>
-    <a href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
+    <a class="btn btn-primary" href="{% url 'learning_logs:new_entry' topic.id %}">Add new entry</a>
 </div>
 {% endblock content %}
