Link user profile to dropdown menu. Fixes #42

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,16 +45,14 @@
             <div class="dropdown-menu dropdown-menu-lg-right"
             aria-labelledby="navbarDropdown">
               <a class="dropdown-item"
+              href="{% url 'user_detail' user.username %}">My Profile</a>
+              <a class="dropdown-item"
               href="{% url 'account_set_password' %}">Change password</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item"
               href="{% url 'account_reset_password' %}">Forgot password?</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item"
               href="{% url 'account_email' %}">Change email</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'account_logout' %}"> Log Out</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'about' %}">About</a>
             </div>
           </li>
