--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -50,7 +50,7 @@
     <form method="post" action="{% url 'account_email' %}" class="col-md-6 add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" class="btn btn-info" type="submit">Add E-mail</button>
+        <button name="action_add" class="btn btn-primary" type="submit">Add E-mail</button>
         <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     </form>
   {% endif %}
