--- a/templates/learning_logs/topics.html
+++ b/templates/learning_logs/topics.html
@@ -1,24 +1,21 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block page_header %}
-  <h2>Topics</h2>
-{% endblock page_header %}
 
 {% block content %}
 <div class="container">
   <p>
+  <h2>Topics</h2>
   <ul>
     {% for topic in topics %}
       <li><h3>
-          <a class="btn btn-primary" href="{% url 'learning_logs:topic' topic.id %}">{{ topic  }}</a>
+          <a class="btn btn-primary" href="{% url 'topic' topic.id %}">{{ topic  }}</a>
       </h3></li>
       {% empty %}
         <li><h3>No topics have been added yet.</h3></li>
       {% endfor %}
   </ul>
-
-  <h3><a class="btn btn-primary btn-success" href="{% url 'learning_logs:new_topic' %}">Add a new topic</a></h3>
+  <h3><a class="btn btn-primary btn-success" href="{% url 'new_topic' %}">Add a new topic</a></h3>
   <p>
 </div>
 {% endblock content %}
