--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                 <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
               {% endif %}
               <span class="page-current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
               </span>
               {% if page_obj.has_next %}
                 <a class="btn btn-info" href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
