--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Home{% endblock title %}
+
 {% block page_header %}
   <div class="jumbotron">
     <h1 class="display-4">Track your learning.</h1>
