--- a/templates/learning_logs/edit_entry.html
+++ b/templates/learning_logs/edit_entry.html
@@ -14,6 +14,7 @@
     {% bootstrap_form form %}
     {% buttons %}
     <button name="submit" class="btn btn-primary">Save changes</button>
+    <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     {% endbuttons %}
   </form>
   </p>
