--- a/templates/learning_logs/new_topic.html
+++ b/templates/learning_logs/new_topic.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% load crispy_forms_tags }%
 
-{% block title %}Learning Log - Add a new topic{% endblock title %}
+{% block title %}Add a new topic{% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -13,6 +13,7 @@
     {% bootstrap_form form %}
     {% buttons %}
       <button name="submit" class="btn btn-primary">Add topic</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     {% endbuttons %}
   </form>
   </p>
