--- a/templates/learning_logs/topics.html
+++ b/templates/learning_logs/topics.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}Topics{% endblock title %}
 
 {% block content %}
 <div class="container">
