Update account templates. Fixes #73

--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,21 +1,21 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title %}Password Change{% endblock title %}
+{% load i18n %}
+
+{% block title %}{% trans "Change Password" %}{% endblock title %}
 
 {% block content %}
 <div class="container">
   <p>
-  <h2>Password change</h2>
-  <p>Please enter your old password, for security's sake, and then enter your
-  new password twice so we can verify you typed it in correctly.</p>
+  <h2>{% trans "Change Password" %}</h2>
 
-  <form method="POST" action="{% url 'account_change_password' %}" class="col-md-6 password_change">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input class="btn btn-success" type="submit" value="Change my password">
-    <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+  <form class="col-md-4" method="POST" action="{% url 'account_change_password' %}" class="password_change">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <button class="btn btn-success" type="submit">{% trans 'Change Password' %}</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
   </form>
   </p>
 </div>
-{% endblock content %}
+{% endblock %}
