--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -1,9 +1,17 @@
-{% extends 'base.html' %}
+<!-- templates/account/password_reset_done.html -->
+{% extends "base.html" %}
+{% load account %}
 
-{% block title %}Email Sent{% endblock title %}
+{% block title %}Password Reset{% endblock title %}
 
 {% block content %}
-  <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password.
-  You should receive the email shortly!</p>
+<div class="container">
+  <p>
+    <h2>Password Reset</h2>
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
+    <p>We have sent you an e-mail. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.</p>
+  </p>
+</div>
 {% endblock content %}
