--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -1,67 +1,73 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}E-mail Addresses{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans "E-mail Addresses" %}{% endblock title %}
 
 {% block content %}
 <div class="container">
   <p>
-    <h2>E-mail Addresses</h2>
-{% if user.emailaddress_set.all %}
-<p>The following e-mail addresses are associated with your account:</p>
+    <h2>{% trans "E-mail Addresses" %}</h2>
+    {% if user.emailaddress_set.all %}
+    <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="col-md-8 email_list" method="post">
-{% csrf_token %}
-<fieldset class="blockLabels">
+    <form action="{% url 'account_email' %}" class="col-md-8 email_list" method="post">
+    {% csrf_token %}
+    <fieldset class="blockLabels">
 
-  {% for emailaddress in user.emailaddress_set.all %}
-<div class="ctrlHolder">
+    {% for emailaddress in user.emailaddress_set.all %}
+    <div class="ctrlHolder">
       <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
 
       <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
 
-{{ emailaddress.email }}
-    {% if emailaddress.verified %}
-    <span class="verified">Verified</span>
+      {{ emailaddress.email }}
+        {% if emailaddress.verified %}
+        <span class="verified">{% trans "Verified" %}</span>
+        {% else %}
+        <span class="unverified">{% trans "Unverified" %}</span>
+        {% endif %}
+        {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
+      </label>
+    </div>
+    {% endfor %}
+
+    <div class="buttonHolder">
+      <button class="btn btn-success secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+      <button class="btn btn-info secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+      <button class="btn btn-danger primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+    </div>
+
+    </fieldset>
+    </form>
+
     {% else %}
-    <span class="unverified">Unverified</span>
+    <p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
+
     {% endif %}
-      {% if emailaddress.primary %}<span class="primary">Primary</span>{% endif %}
-</label>
-</div>
-  {% endfor %}
 
-<div class="buttonHolder">
-      <button class="btn btn-success secondaryAction mb-2" type="submit" name="action_primary" >Make Primary</button>
-      <button class="btn btn-info secondaryAction mb-2" type="submit" name="action_send" >Re-send Verification</button>
-      <button class="btn btn-danger primaryAction mb-2" type="submit" name="action_remove" >Remove</button>
-</div>
+    {% if can_add_email %}
+    <p>
+    <h3>{% trans "Add E-mail Address" %}</h3>
 
-</fieldset>
-</form>
-
-{% else %}
-<p><strong>Warning:</strong> You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc.</p>
-
-{% endif %}
-
-  {% if can_add_email %}
-    <h3>Add E-mail Address</h3>
-    <form method="post" action="{% url 'account_email' %}" class="col-md-6 add_email">
+    <form method="post" action="{% url 'account_email' %}" class="col-md-4 add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button name="action_add" class="btn btn-primary" type="submit">Add E-mail</button>
-        <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+        <button name="action_add" class="btn btn-primary" type="submit">{% trans "Add E-mail" %}</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+    </p>
     </form>
-  {% endif %}
-
-{% endblock %}
+    {% endif %}
+  </p>
+</div>
+{% endblock content %}
 
 
 {% block extra_body %}
 <script type="text/javascript">
 (function() {
-  var message = "Do you really want to remove the selected e-mail address?";
+  var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
   var actions = document.getElementsByName('action_remove');
   if (actions.length) {
     actions[0].addEventListener("click", function(e) {
@@ -72,6 +78,4 @@
   }
 })();
 </script>
-  </p>
-</div>
-{% endblock %}
+{% endblock extra_body %}
