--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,19 +1,29 @@
-{% extends 'base.html' %}
+<!-- templates/account/password_reset.html -->
+{% extends "base.html" %}
 {% load crispy_forms_tags %}
+{% load account %}
 
-{% block title %}Forgot Your Password?{% endblock title %}
+{% block title %}Password Reset{% endblock title %}
 
 {% block content %}
 <div class="container">
   <p>
-  <h2>Forgot your password?</h2>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-  <form class="col-md-6" method="POST">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <input class="btn btn-success" type="submit" value="Send me instructions!">
-  <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
-  </form>
+    <p>
+    <h2>Password Reset</h2>
+    {% if user.is_authenticated %}
+    {% include "account/snippets/already_logged_in.html" %}
+    {% endif %}
+    <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
+    <p>
+    <form class="col-md-4" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-success" type="submit">Reset My Password</button>
+        <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+    </form>
+    </p>
+    <p>Please contact us if you have any trouble resetting your password.</p>
+    </p>
   </p>
 </div>
 {% endblock content %}
