--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,15 +1,15 @@
 <!-- templates/account/login.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 {% load socialaccount %}
 
 {% block title %}Sign In{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
   <h2>Sign In</h2>
-  <form class="col-md-4" method="post">
+  <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <a class="button secondaryAction mr-2" href="{% url 'account_reset_password' %}">Forgot Password?</a>
@@ -19,4 +19,4 @@
   <a class="btn btn-dark" href="{% provider_login_url 'github' %}">Continue with GitHub</a>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
