--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,15 +1,15 @@
 <!-- templates/account/logout.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 
 {% block title %}Log Out{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
   <h2>Log Out</h2>
     <p>Are you sure you want to log out?</p>
-    <form class="col-md-4" method="post" action="{% url 'account_logout' %}">
+    <form method="post" action="{% url 'account_logout' %}">
       {% csrf_token %}
       {{ form|crispy }}
       <button class="btn btn-danger" type="submit">Log Out</button>
@@ -18,4 +18,4 @@
     </p>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
