--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,11 +1,11 @@
 <!-- templates/account/password_reset.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load crispy_forms_tags %}
 {% load account %}
 
 {% block title %}Password Reset{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <p>
@@ -15,7 +15,7 @@
     {% endif %}
     <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
     <p>
-    <form class="col-md-4" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset" >
         {% csrf_token %}
         {{ form|crispy }}
         <button class="btn btn-success" type="submit">Reset My Password</button>
@@ -26,4 +26,4 @@
     </p>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
