--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,13 +1,13 @@
 <!-- templates/account/password_reset_from_key_done.html -->
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% block title %}Change Password{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <h2>Change Password</h2>
     <p>Your password is now changed.</p>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
