--- a/templates/learning_logs/new_entry.html
+++ b/templates/learning_logs/new_entry.html
@@ -1,22 +1,23 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 {% load bootstrap4 %}
 {% load crispy_forms_tags %}
 
 {% block title %}{{ topic }} - Add a new entry {% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
   <h2>New Entry</h2>
   <p><a href="{% url 'topic' topic.id %}">{{ topic }}</a></p>
   <p>Add a new entry:</p>
-  <form class="col-md-6" action="{% url 'new_entry' topic.id %}" method='post'>
+  <form action="{% url 'new_entry' topic.id %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
-    <button name="submit" class="btn btn-primary">Add entry</button>
+      <button name="submit" class="btn btn-primary">Add entry</button>
+      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
     {% endbuttons %}
   </form>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
