--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
 
 {% block title %}About{% endblock title %}
 
-{% block content %}
+{% block inner %}
 <div class="container">
   <p>
     <h2>About page</h2>
@@ -22,4 +22,4 @@ in massa.
       </p>
   </p>
 </div>
-{% endblock content %}
+{% endblock inner %}
