--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,12 @@
     <div class="pb-2 mb-2 border-bottom">
       {% block page_header %}{% endblock page_header %}
     </div>
-    <div>
+    <div class="container">
+      {% if messages %}
+        {% for message in messages %}
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+        {% endfor %}
+      {% endif %}
       {% block content %}
       {% endblock content %}
       <!-- Pagination -->
