Add page footer. Resolves #102

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,6 +102,39 @@
     <!-- JavaScript -->
     <script src = "{% static 'js/base.js' %}"></script>
   </main>
+    <!-- Begin footer -->
+  <div class="container">
+  <div class="content"></div>
+  <footer>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+    <div class="col-md-12 col-sm-12 col-sm-push-6">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item col-md-2">
+           <p style="color:white;font-size:60%"> &copy; 2023 learning-log&reg;</p>
+          </li>
+          <li class="nav-item col-md-2">
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="https://github.com/kevinbowen777/learning-log" target="_blank">Source Code</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="https://github.com/kevinbowen777/learning-log/issues" target="_blank">Bug Reports</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1"
+                href="/contact">Contact Us</a>
+          </li>
+          <li class="nav-item col-md-2">
+            <a class="btn btn-outline-light btn-sm mt-1" href="/about">About Us</a>
+          </li>
+        </ul>
+    </div>
+  </nav>
+  </footer>
+  </div>
+  <!-- End footer -->
 </body>
 
 </html>
