Adjust button spacing & size

--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -36,7 +36,7 @@
     <div class="buttonHolder">
       <button class="btn btn-success secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
       <button class="btn btn-info secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="btn btn-danger primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+      <button class="btn btn-danger primaryAction mt-2" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
     </div>
 
     </fieldset>
