--- a/templates/learning_logs/topics.html
+++ b/templates/learning_logs/topics.html
@@ -19,21 +19,21 @@
   {% if topics.has_other_pages %}
   <ul class="pagination">
     {% if topics.has_previous %}
-      <li><a class="btn btn-info mr-2" href="?page={{ topics.previous_page_number }}">&laquo; Previous</a></li>
+      <li><a class="btn btn-info btn-sm mr-1" href="?page={{ topics.previous_page_number }}">&laquo; Previous</a></li>
     {% else %}
-      <li class="btn btn-info disabled mr-2"><span>&laquo; Previous</span></li>
+      <li class="btn btn-info btn-sm disabled mr-1"><span>&laquo; Previous</span></li>
     {% endif %}
     {% for i in topics.paginator.page_range %}
       {% if topics.number == i %}
-        <li class="btn btn-info active"><span> {{ i }} <span class="sr-only">(current)</span></span></li>
+        <li class="btn btn-info btn-sm active mr-1"><span> {{ i }} <span class="sr-only">(current)</span></span></li>
       {% else %}
-        <li><a class="btn btn-info" href="?page={{ i }}">{{ i }}</a></li>
+        <li><a class="btn btn-info btn-sm mr-1" href="?page={{ i }}">{{ i }}</a></li>
       {% endif %}
     {% endfor %}
     {% if topics.has_next %}
-      <li><a class="btn btn-info ml-2" href="?page={{ topics.next_page_number }}">Next &raquo;</a></li>
+      <li><a class="btn btn-info btn-sm ml-1" href="?page={{ topics.next_page_number }}">Next &raquo;</a></li>
     {% else %}
-      <li class="btn btn-info disabled ml-2"><span>Next &raquo;</span></li>
+      <li class="btn btn-info btn-sm disabled ml-1"><span>Next &raquo;</span></li>
     {% endif %}
   </ul>
 {% endif %}
