--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load bootstrap4 %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -8,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Learning Log | {% block title %}{% endblock title %}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}"/>
+  <!-- Bootstrap Css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- CSS -->
-  {% bootstrap_css %}
-  {% bootstrap_javascript jquery='full' %}
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
@@ -40,7 +39,7 @@
             aria-haspopup="true" aria-expanded="false">
               {{ user.username }}
             </a>
-            <div class="dropdown-menu dropdown-menu-lg-right"
+            <div class="dropdown-menu dropdown-menu-right"
             aria-labelledby="navbarDropdown">
               <a class="dropdown-item"
               href="{% url 'user_detail' user.username %}">My Profile</a>
@@ -99,6 +98,10 @@
         {% endif %}
       {% endblock pagination %}
     </div>
+    <!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- JavaScript -->
     <script src = "{% static 'js/base.js' %}"></script>
   </main>
