Update Cancel button with onclick. Resolves #268

--- a/templates/learning_logs/new_entry.html
+++ b/templates/learning_logs/new_entry.html
@@ -12,7 +12,7 @@
     {% csrf_token %}
     {{ form.as_p }}
       <button name="submit" class="btn btn-primary">Add entry</button>
-      <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+      <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
   </form>
   </p>
 </div>
