--- a/templates/learning_logs/new_topic.html
+++ b/templates/learning_logs/new_topic.html
@@ -11,7 +11,7 @@
     {% csrf_token %}
     {{ form.as_p }}
           <button name="submit" class="btn btn-primary">Add topic</button>
-          <a class="btn btn-info" href="javascript:window.history.back()">Cancel</a>
+          <a class="btn btn-info" href="#" onclick="window.history.back()">Cancel</a>
   </form>
   </p>
 </div>
