--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,11 @@
    <header>
    <!-- Fixed navbar -->
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-   <a class="navbar-brand" href="{% url 'home' %}">Learning Log</a>
+   <a class="navbar-brand" href="{% url 'topics' %}">Learning Log</a>
    {% if user.is_authenticated %}
      <ul class="navbar-nav mr-auto">
        <li class="nav-item">
-         <a href="{% url 'topics' %}">Topics</a>
+         <a href="{% url 'new_topic' %}">Add a new topic</a>
        </li>
      </ul>
    {% endif %}
@@ -68,7 +68,7 @@
     </nav>
   </header>
   <main role="main" class="container">
-    <div class="pb-2 mb-2 border-bottom">
+    <div class="pb-2 mb-2">
       {% block page_header %}{% endblock page_header %}
     </div>
     <div class="container">
